package Observer;

public interface Observer {
    void actualizar(String tipo, Object o);
}

